--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -623,3 +623,20 @@ pre tt:after {
     font-size: 100%;
   }
 }
+
+.logo-container {
+  float: left;
+  width: 60%;
+}
+@media only screen and (max-width: 600px) {
+  .logo-container {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+  .navbar {
+    width: 100%;
+    float: none;
+    text-align: center;
+  }
+}
